--- a/PlutoWallet/Components/Nft/NftSellView.xaml
+++ b/PlutoWallet/Components/Nft/NftSellView.xaml
@@ -45,13 +45,13 @@
                         </Grid.ColumnDefinitions>
 
                         <buttons:BasicGrayButton Text="Cancel" Grid.Column="0"
-                                             Clicked="OnCancelClicked"
+                                                 Clicked="OnCancelClicked"
                                                 />
 
-                        <buttons:PlutoWalletElevatedButton Text="Transfer"
-                                                       Grid.Column="1"
-                                                       Clicked="SignAndTransferClicked"
-                                                       ButtonState="{Binding ConfirmButtonState}"/>
+                        <buttons:PlutoWalletElevatedButton Text="Sell"
+                                                           Grid.Column="1"
+                                                           Clicked="SignAndSellClicked"
+                                                           ButtonState="{Binding ConfirmButtonState}"/>
 
                     </Grid>
                 </AbsoluteLayout>
