--- a/PlutoWallet/Components/Nft/NftTransferView.xaml
+++ b/PlutoWallet/Components/Nft/NftTransferView.xaml
@@ -27,16 +27,16 @@
                        TextColor="#888888"
                        FontAttributes="Bold"/>
 
-                    <Label Text="" x:Name="errorLabel" TextColor="Red" />
+                    <Label Text="{Binding ErrorMessage}" TextColor="Red" />
 
                 </VerticalStackLayout>
                 <AbsoluteLayout AbsoluteLayout.LayoutBounds="0.5, 1, 1, 80"
                             AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional">
 
                     <Grid AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 50"
-                      AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional"
-                      ColumnSpacing="15"
-                      Margin="0, 0, 0, 10">
+                          AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional"
+                          ColumnSpacing="15"
+                          Margin="0, 0, 0, 10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="*" />
@@ -48,7 +48,7 @@
 
                         <buttons:PlutoWalletElevatedButton Text="Transfer"
                                                        Grid.Column="1"
-                                                       Clicked="SignAndTransferClicked"
+                                                       Command="{Binding TransferCommand}"
                                                        ButtonState="{Binding ConfirmButtonState}"/>
 
                     </Grid>
