--- a/PlutoWallet/Components/Nft/NftThumbnailView.xaml
+++ b/PlutoWallet/Components/Nft/NftThumbnailView.xaml
@@ -24,20 +24,11 @@
                         <RoundRectangle CornerRadius="20" />
 
                     </Border.StrokeShape>
-                    <Border.Shadow>
-                        <Shadow Brush="Black"
-                                Offset="0,2" 
-                                Radius="3"
-                                Opacity="0.1" />
-
-                    </Border.Shadow>
 
                     <AbsoluteLayout>
 
                         <Image AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
-                               x:Name="image" Aspect="AspectFill"
-                               HeightRequest="200"
-                               WidthRequest="200"/>
+                               x:Name="image" Aspect="AspectFill"/>
                     </AbsoluteLayout>
                 </Border>
 
@@ -45,7 +36,8 @@
                                 Grid.Column="1">
                     <StackLayout Orientation="Vertical"
                                   Padding="10"
-                                 AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All">
+                                 AbsoluteLayout.LayoutBounds="0.5, 0.5, 1, 1" AbsoluteLayout.LayoutFlags="All"
+                                 >
                         <Label Margin="0, 0, 0, 5"
                                FontSize="16">
                             <Label.FormattedText>
